fixed blurry persona

--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -968,10 +968,10 @@ a:focus, a:active {
   background-color: #888888;
 }
 .landing-page .carousel-indicators.carousel-indicators-blue li {
-  border-color: #00bbff;
+  border-color: #3A7544;
 }
 .landing-page .carousel-indicators.carousel-indicators-blue .active {
-  background-color: #00bbff;
+  background-color: #3A7544;
 }
 .landing-page .carousel-indicators.carousel-indicators-green li {
   border-color: #3ABE41;
